Fix prompt() styles in dark mode

--- a/src/renderer/browser-ui-reimplementation/base-prompt.css
+++ b/src/renderer/browser-ui-reimplementation/base-prompt.css
@@ -11,6 +11,9 @@
   background: rgba(0, 0, 0, 0.5);
   color: black;
 }
+[theme="dark"] .container {
+  color: white;
+}
 
 .inner {
   background: white;
@@ -19,6 +22,10 @@
   border-radius: 3px;
   box-shadow: black 0 0 10px;
   max-width: 480px;
+}
+[theme="dark"] .inner {
+  background: #222;
+  border-color: #999;
 }
 
 .content {
